--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -21,6 +21,7 @@
                 padding-bottom: 20px;
             }
           </style>
+          <link rel="stylesheet" href="/static/Selecter/jquery.fs.selecter.min.css">
           <link rel="stylesheet" href="/static/Bootflat/css/bootstrap.min.css">
           <link rel="stylesheet" href="/static/Bootflat/bootflat/css/bootflat.min.css">
           <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
