--- a/templates/base/mixes/selected.html
+++ b/templates/base/mixes/selected.html
@@ -1,4 +1,4 @@
-<div id="{{container}}-selected" class="row margin-top" data-ng-show="{{container}}.selection.group">
+<div id="{{container}}-selected" class="row margin-top" data-ng-show="{{container}}.selection.group && !{{container}}.skipped">
 
   <div class="col-xs-12">
     <h3>Selected
