--- a/templates/base/mixes/then.html
+++ b/templates/base/mixes/then.html
@@ -1,4 +1,4 @@
-<div id="mix-then" class="padding-top">
+<div id="mix-then" class="padding-top" data-ng-if="when.saved">
   <div class="page-header">
     <h2>Then</h2>
   </div>
@@ -16,7 +16,7 @@
   {# Configure the criterias value and save #}
   {% include 'base/mixes/criteria.html' with container='then' %}
 
-  <div class="row margin-top">
+  <div class="row margin-top" data-ng-show="then.selection.criteria">
     <div class="col-md-2">
       <button type="button" class="btn btn-primary btn-block" data-ng-click="scrollTo('#mix-finish')">Continue</button>
     </div>
