--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,7 +24,7 @@
           <link rel="stylesheet" href="/static/Selecter/jquery.fs.selecter.min.css">
           <link rel="stylesheet" href="/static/Bootflat/css/bootstrap.min.css">
           <link rel="stylesheet" href="/static/Bootflat/bootflat/css/bootflat.min.css">
-          <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
+          <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.css">
           <link rel="stylesheet" href="/static/toastr/toastr.min.css">
         {% endblock %}
         {% block internal_css %}
