--- a/templates/base/mixes/finish.html
+++ b/templates/base/mixes/finish.html
@@ -1,4 +1,4 @@
-<div id="mix-finish" class="filler padding-top" data-ng-if="then.saved">
+<div id="mix-finish" class="filler padding-top" data-ng-show="then.saved">
   <div class="page-header">
     <h2>Finish</h2>
   </div>
