--- a/templates/partials/actions/actions.html
+++ b/templates/partials/actions/actions.html
@@ -2,14 +2,41 @@
   <h2>Actions</h2>
 </div>
 
-<div class="well selectable" data-ng-repeat="action in actions" data-ng-click="onSelectedAction(action)">
-  <div class="row">
+<div class="well selectable" data-ng-repeat="action in actions">
+  <div id="action" class="row">
     <div class="col-md-2 col-sm-3">
       <img src="http://placehold.it/150">
     </div>
-    <div class="col-md-10 col-sm-9">
+    <div class="col-md-8 col-sm-6">
       <h4 data-ng-bind="::action.name"></h4>
       <p data-ng-bind="::action.description"></p>
     </div>
   </div>
+  <div id="action-shortcuts" class="row">
+    <div class="col-xs-4 col-sm-2 pull-right">
+      <button type="button" class="btn btn-danger btn-block" data-ng-click="remove(action)">Remove</button>
+    </div>
+    <div class="col-xs-4 col-sm-2 pull-right">
+      <button type="button" class="btn btn-block" data-ng-click="onSelectedAction(action)">Edit</button>
+    </div>
+    <div class="col-xs-4 col-sm-2 pull-right">
+      <button type="button" class="btn btn-block" data-ng-click="run(action)">RUN</button>
+    </div>
+  </div>
 </div>
+
+<modal title="Are you sure?" visible="showConfirmRemoveModal">
+  <div class="modal-body">
+    <form role="form">
+      <div class="form-group">
+        <label for="name">Type your action name to confirm removal</label>
+        <input type="name" class="form-control" id="name" placeholder="Enter name of action" data-ng-model="confirmName" />
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+    <button type="button" class="btn btn-danger"
+      data-ng-show="removeAction.name == confirmName" data-ng-click="confirmRemove(confirmName)">Remove</button>
+  </div>
+</modal>
