--- a/templates/base/mixes/groups.html
+++ b/templates/base/mixes/groups.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="col-xs-12">
-    <h3>Available plugins</h3>
+    <h3>Available criterias</h3>
     <p class="lead">
     Select one of the plugins that provides when criterias
     </p>
