Moved from groups to items

--- a/templates/base/mixes/finish.html
+++ b/templates/base/mixes/finish.html
@@ -11,7 +11,7 @@
   {% include 'base/mixes/groups.html' with container='finish' skip_target='#personalize' %}
 
   {# Then show selected groups criterias #}
-  {% include 'base/mixes/selected.html' with container='finish' %}
+  {#% include 'base/mixes/selected.html' with container='finish' %#}
 
   {# Configure the criterias value and save #}
   {% include 'base/mixes/criteria.html' with container='finish' %}
