--- a/templates/base/mixes/then.html
+++ b/templates/base/mixes/then.html
@@ -11,7 +11,7 @@
   {% include 'base/mixes/groups.html' with container='then' %}
 
   {# Then show selected groups criterias #}
-  {% include 'base/mixes/selected.html' with container='then' %}
+  {#% include 'base/mixes/selected.html' with container='then' %#}
 
   {# Configure the criterias value and save #}
   {% include 'base/mixes/criteria.html' with container='then' %}
