--- a/templates/base/mixes/when.html
+++ b/templates/base/mixes/when.html
@@ -11,7 +11,7 @@
   {% include 'base/mixes/groups.html' with container='when' skip_target='#mix-then' %}
 
   {# Then show selected groups criterias #}
-  {% include 'base/mixes/selected.html' with container='when' %}
+  {#% include 'base/mixes/selected.html' with container='when' %#}
 
   {# Configure the criterias value and save #}
   {% include 'base/mixes/criteria.html' with container='when' %}
