--- a/templates/base/mixes/groups.html
+++ b/templates/base/mixes/groups.html
@@ -13,7 +13,7 @@
   <div class="col-xs-6 col-xs-4 col-md-2" data-ng-repeat="item in {{container}}.items">
     <div class="well criteria-group selectable text-center" data-ng-click="onSelectCriteria({{container}}, item, '#{{container}}-criteria')">
       <div class="icon-large">
-        <i class="fa fa-6 icon-rockit"></i>
+        <i class="fa fa-6" data-ng-class="item.icon"></i>
       </div>
       <div data-ng-bind="item.name"></div>
       <hr data-ng-class="{ 'active': {{container}}.selection.criteria == item }" />
