--- a/static/rockit/css/common/common.less
+++ b/static/rockit/css/common/common.less
@@ -39,3 +39,19 @@ p.thumbnail {
   }
 
 }
+
+.form-criteria {
+
+  label {
+    min-width: 10em;
+  }
+
+  .heading {
+    margin-bottom: 20px;
+  }
+
+  .well {
+    padding: 20px;
+  }
+
+}
