--- a/templates/base/mixes/when.html
+++ b/templates/base/mixes/when.html
@@ -17,7 +17,7 @@
   {% include 'base/mixes/criteria.html' with container='when' %}
 
   <div class="row margin-top" data-ng-show="when.selection.criteria && !when.skipped">
-    <div class="col-md-2">
+    <div class="col-md-2 pull-right">
       <button type="button" class="btn btn-primary btn-block" data-ng-click="next(when, '#mix-then')">Continue</button>
     </div>
   </div>
