--- a/templates/base/mixes/criteria.html
+++ b/templates/base/mixes/criteria.html
@@ -6,23 +6,26 @@
     </p>
   </div>
 
-  <div class="col-xs-12">
-    <form class="form-inline form-criteria" role="form" name="{{container}}">
-      <div class="well" data-ng-repeat="(key, criteria) in {{container}}.criteria.actions.POST"
-        data-ng-class="{ 'has-error has-feedback': criteria.error }">
-        <p class="heading text-muted" data-ng-bind="::{{container}}.selection.criteria.name"></p>
-        <div data-ng-switch="criteria.type">
-          <div data-ng-switch-when="select">
-            {% include 'partials/mixes/criterias/select.html' %}
-          </div>
-          <div data-ng-switch-when="schedule">
-            {% include 'partials/mixes/criterias/schedule.html' %}
-          </div>
-          <div data-ng-switch-default>
-          {% include 'partials/mixes/criterias/default.html' %}
-          </div>
+  <div class="criteria col-xs-12" name="{{container}}">
+    <div class="well" data-ng-repeat="(key, criteria) in {{container}}.criteria.actions.POST"
+      data-ng-class="{ 'has-error has-feedback': criteria.error }">
+      <div class="col-xs-12">
+        <h4 class="text-muted" data-ng-bind="::{{container}}.selection.criteria.name"></h4>
+      </div>
+      <div class="clearfix" data-ng-switch="criteria.type">
+        <div data-ng-switch-when="alarm">
+          {% include 'partials/mixes/criterias/alarm.html' %}
+        </div>
+        <div data-ng-switch-when="select">
+          {% include 'partials/mixes/criterias/select.html' %}
+        </div>
+        <div data-ng-switch-when="schedule">
+          {% include 'partials/mixes/criterias/schedule.html' %}
+        </div>
+        <div data-ng-switch-default>
+        {% include 'partials/mixes/criterias/default.html' %}
         </div>
       </div>
-    </form>
+    </div>
   </div>
 </div>
