--- a/templates/base/mixes/then.html
+++ b/templates/base/mixes/then.html
@@ -17,11 +17,11 @@
   {% include 'base/mixes/criteria.html' with container='then' %}
 
   <div class="row margin-top" data-ng-show="then.selection.criteria">
-    <div class="col-md-2">
-      <button type="button" class="btn btn-primary btn-block" data-ng-click="next(then, '#mix-finish')">Continue</button>
-    </div>
-    <div class="col-md-2">
+    <div class="col-md-2 pull-right">
       <button type="button" class="btn btn-block" data-ng-click="scrollTo('#mix-when')">Back</button>
+    </div>
+    <div class="col-md-2 pull-right">
+      <button type="button" class="btn btn-primary btn-block" data-ng-click="next(then, '#mix-finish')">Continue</button>
     </div>
   </div>
 </div>
