--- a/templates/partials/mixes/criterias/select.html
+++ b/templates/partials/mixes/criterias/select.html
@@ -1,3 +1,9 @@
-<label for="{{key}}" data-ng-bind="::criteria.label | translate"></label>
-<select id="{{key}}" name="{{key}}" class="form-control selecter_basic" data-items="criteria.values"
-  data-ng-model="criteria.model"></select>
+{% verbatim %}
+
+<label for="{{key}}" class="control-label col-md-2 col-sm-3 col-xs-12" data-ng-bind="::criteria.label | translate"></label>
+<div class="col-xs-6 col-sm-3 col-md-2">
+  <select id="{{key}}" name="{{key}}" class="form-control selecter_basic" data-items="criteria.values"
+      data-ng-model="criteria.model"></select>
+</div>
+
+{% endverbatim %}
