--- a/templates/partials/mixes/criterias/alarm.html
+++ b/templates/partials/mixes/criterias/alarm.html
@@ -4,7 +4,7 @@
   <div id="{{container}}.criteria.actions.POST['alarm'].id" class="input-group clockpicker"
     data-ng-model="{{container}}.criteria.actions.POST['alarm'].model"></div>
   <span id="helpRequired" class="text-right help-block"
-    data-ng-if="{{container}}.criteria.actions.POST['alarm'].required && {{container}}.criteria.actions.POST['alarm']..error">
+    data-ng-if="{{container}}.criteria.actions.POST['alarm'].required && {{container}}.criteria.actions.POST['alarm'].error">
       This field is required</span>
 </div>
 
