--- a/templates/base/mixes/finish.html
+++ b/templates/base/mixes/finish.html
@@ -18,7 +18,7 @@
 
   <div class="row margin-top" data-ng-show="finish.selection.criteria && !finish.skipped">
     <div class="col-md-2">
-      <button type="button" class="btn btn-primary btn-block" data-ng-click="save()">Continue</button>
+      <button type="button" class="btn btn-primary btn-block" data-ng-click="next(finish, '#personalize')">Continue</button>
     </div>
     <div class="col-md-2">
       <button type="button" class="btn btn-block" data-ng-click="scrollTo('#mix-then')">Back</button>
